# ci-pipeline

./: Cargo.toml  config.toml  config.toml.example  config_auth.toml  integration_test.sh  pipeline.yml  simple.yml  test_container.yml  test_failure.yml  test_remote_cache.yml  test_success.yml  test_trigger.yml
.ci/: history.json  state.json
build_output/: result.txt
src/: artifacts.rs  cli.rs  dag.rs  executor.rs  lib.rs  logging.rs  main.rs  matrix.rs  models.rs  parser.rs  remote_cache.rs  reporting.rs  scheduler.rs  services.rs  state.rs  validator.rs  variables.rs
src/cache_server/: main.rs
storage/test-ns/: my-key.meta.json
storage/test-project/: artifact-build-39eb1cf7d2435a2ce5fb9eb44c33427c6a124f4fcbf90ac00c8aaddba9f22cd4.meta.json  artifact-build-aef9699dee5f4b23ec818ae501b099de71a16f6056a69be805ef0cf41a6a3534.meta.json  manual-test.meta.json
