[package]
name = "ci-pipeline"
version = "0.1.0"
edition = "2021"
description = "CI Pipeline DSL parser and DAG scheduler executor"
license = "MIT"

[[bin]]
name = "ci-pipeline"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
petgraph = "0.6"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
glob = "0.3"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
walkdir = "2.5"
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }
quick-xml = { version = "0.31", features = ["serialize"] }
tera = "1.20"
async-trait = "0.1"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
dunce = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
